# polyglotSamples

./: .gitignore  polygotSamples.code-workspace  workspace.code-workspace
C/: HelloWorld.c
C++/: HelloWorld.cpp
CMake/: .gitignore  CMakeLists.txt  main.cpp
Go/: README.md
Go/dlv-dap/: README.md  go.mod  main.go
Go/legacy/: README.md  go.mod
HTML/: HelloWorld.html
Java/: HelloWorld.java
Python/: HelloWorld.py
TypeScript/: tsconfig.json
